# website

./: .gitignore  CONSTITUTION.md  CONTRIBUTING.md  DEPLOY.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  QUICKSTART.md  README.md  RENDER.md  pyproject.toml
.specify/: constitution.md  data-model.md  plan.md  research.md  spec.md  tasks.md
.specify/contracts/: site-pages.openapi.yaml
specs/main/: plan.md  quickstart.md  tasks.md
src/: Makefile  pelicanconf.py  publishconf.py
src/content/devops/: getting-started-containers.md
src/content/diy/: simple-wooden-desk-organizer.md
src/content/extra/: static.json
src/content/pages/: 404.md  about.md  contact.md
src/content/sketchnotes/: power-of-sketchnotes.md
